--- a/backend/prologue/build.gradle
+++ b/backend/prologue/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	implementation("io.springfox:springfox-boot-starter:3.0.0")
+
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
 }
 
 tasks.named('test') {
