--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,22 +1,19 @@
 {
     "env": {
-        "browser": true,
-        "es2021": true
+      "browser": true,
+      "es2021": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "standard-with-typescript"
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:@typescript-eslint/recommended"
     ],
-    "overrides": [
-    ],
+    "overrides": [],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "createDefaultProgram": true
+      "ecmaVersion": "latest",
+      "sourceType": "module"
     },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-    }
-}
+    "plugins": ["react", "@typescript-eslint"],
+    "rules": {}
+  }
