--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
+    "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
