[BE] feat: Dockerfile 수정

--- a/backend/prologue/Dockerfile
+++ b/backend/prologue/Dockerfile
@@ -6,4 +6,4 @@ COPY ./build/libs/prologue-0.0.1-SNAPSHOT.jar prologue-server.jar
 
 ENTRYPOINT ["java", "-jar", "prologue-server.jar"]
 
-
+EXPOSE 8080
