--- a/backend/prologue/Dockerfile
+++ b/backend/prologue/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:8-jdk
 
-WORKDIR /backend
+WORKDIR /backend/prologue
 
 COPY ./build/libs/prologue-0.0.1-SNAPSHOT.jar prologue-server.jar
 
