[BE] feat: 게시물 관련 요청 바디값 필수 설정

--- a/backend/prologue/build.gradle
+++ b/backend/prologue/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	implementation("io.springfox:springfox-boot-starter:3.0.0")
 
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 }
 
 tasks.named('test') {
