--- a/backend/prologue/build.gradle
+++ b/backend/prologue/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	implementation("io.springfox:springfox-boot-starter:3.0.0")
 
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	implementation "com.goterl:lazysodium-java:5.1.1"
+	implementation "net.java.dev.jna:jna:5.11.0"
 }
 
 tasks.named('test') {
