--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.1.3",
+    "canvas-confetti": "^1.6.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
+    "@types/canvas-confetti": "^1.4.3",
     "@types/react-color": "^3.0.6",
     "@types/react-grid-layout": "^1.3.2",
     "@types/shortid": "^0.0.29",
