--- a/backend/prologue/build.gradle
+++ b/backend/prologue/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
 }
 
 tasks.named('test') {
