--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,14 @@
     "@mui/material": "^5.10.12",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@toast-ui/react-editor": "^3.2.2",
     "aos": "^2.3.4",
     "axios": "^1.1.3",
     "canvas-confetti": "^1.6.0",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-color": "^2.19.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
     "react-grid-layout": "^1.3.4",
     "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.4",
@@ -55,6 +54,7 @@
     "@types/aos": "^3.0.4",
     "@types/canvas-confetti": "^1.4.3",
     "@types/react-color": "^3.0.6",
+    "@types/react-dom": "^18.0.8",
     "@types/react-grid-layout": "^1.3.2",
     "@types/shortid": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
