--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.1.3",
     "canvas-confetti": "^1.6.0",
+    "cssjson": "^2.1.3",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-calendar": "^3.9.0",
