--- a/backend/prologue/build.gradle
+++ b/backend/prologue/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
+	runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.104.Final:osx-aarch_64'
+	implementation( 'io.netty:netty-resolver-dns-native-macos')
 }
 
 tasks.named('test') {
