--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.1.3",
     "canvas-confetti": "^1.6.0",
     "cssjson": "^2.1.3",
+    "eslint-config-prettier": "^9.1.0",
     "moment": "^2.29.4",
     "patch-package": "^6.5.0",
     "react": "^17.0.2",
@@ -37,12 +38,15 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint --fix ./src"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "prettier"
     ]
   },
   "browserslist": {
