--- a/backend/prologue/build.gradle
+++ b/backend/prologue/build.gradle
@@ -6,7 +6,6 @@ plugins {
 
 group = 'com.b208'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
 
 configurations {
 	compileOnly {
@@ -23,6 +22,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	implementation("io.springfox:springfox-boot-starter:3.0.0")
@@ -39,8 +41,12 @@ dependencies {
 
 	runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.104.Final:osx-aarch_64'
 	implementation( 'io.netty:netty-resolver-dns-native-macos')
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
