--- a/backend/prologue/build.gradle
+++ b/backend/prologue/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
 }
 
 test {
