[BE] modify: gitignore에 테스트 application.properties 추가

--- a/backend/prologue/.gitignore
+++ b/backend/prologue/.gitignore
@@ -38,6 +38,7 @@ out/
 
 src/main/resources/application.properties
 src/main/resources/deploy.yaml
+src/test/resources/application.properties
 
 **/.DS_Store
 .DS_Store
